--- a/index.html
+++ b/index.html
@@ -53,10 +53,7 @@
       <option value="">-- Choose a team --</option>
     </select>
     <div id="team-info" class="hidden" aria-live="polite">
-      <div>
-        <div id="team-label" style="font-weight:600;font-size:1.1rem;"></div>
-        <div id="team-division" style="margin-top:.25rem;"></div>
-      </div>
+      <div id="team-details" style="font-size:1rem;line-height:1.3"></div>
       <img id="team-logo" alt="Team logo" src="" />
     </div>
   </div>
